configurationLogger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: configuration-logger
  namespace: gitops-kustomize
  # annotations:
  #   image.openshift.io/triggers: |-
  #     [{"from":{"kind":"ImageStreamTag","name":"gitops-microservice:1.0.0-SNAPSHOT"},"fieldPath":"spec.template.spec.containers[?(@.name==\"configuration-logger\")].image"}]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configuration-logger
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: configuration-logger
    spec:
      imagePullSecrets:
      - name: artifactory
      - name: default-dockercfg-nm2xc
      containers:
      - image: artifactory-artifactory-nginx-artifactory.apps.xnkpeyx0.canadacentral.aroapp.io:80/gitops-local/gitops-micro:latest-test-1
        name: configuration-logger
        resources: {}
