configurationLogger/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: configuration-logger
  namespace: gitops-kustomize
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
  selector:
    app: configuration-logger
