configurationLogger/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: configuration-logger
  namespace: argocd-test
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: configuration-logger
    weight: 100
